# imgeom

./: .gitignore  README.md  setup.cfg
docs/: index.rst
imgeom/: __init__.py  drizmask.py  fitting.py  reproject.py
imgeom/tests/: setup_package.py  test_reproject.py
imgeom/tests/data/: simple_wcs.hdr
