[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = imgeom
description = Image geometric tools
long_description = Tools for dealing with mapping coordinates, measurements, and models between overlapping images
author = STScI
author_email = help@stsci.edu
license = BSD
url = https://github.com/spacetelescope/imgeom
edit_on_github = False
github_project = spacetelescope/imgeom

[entry_points]
